# video_player

./: .gitignore  CMakeLists.txt  EfficientConstraintSorter.py  PlayVideo.bat  README.md  alone_media.py  config.py  create_playlist.py  decrypt_everything.py  encrypt.py  encrypt_everything.py  filename_to_url.py  files_to_download.py  generate_key.py  generate_sortings.py  generate_sortings_choose.py  get_default_playlist_sorting.py  get_playlist_sorting.py  move_video.py  package-lock.json  play_video.py  play_videos.py  project.pro  requirements.txt  test.py  test.txt  url_to_filename.py
dev/: TODO.txt  test.js  txt.py
include/: VideoEngine.h
playlists/: hey.txt
qml/: MainWindow.qml  WinNativeSurface.qml  main.qml
src/: PlayerBackend.cpp  UIController.cpp  VideoEngine.cpp  VideoRenderer.cpp  VideoSurface.qml  main.cpp
stored_algo/app_script/: Sidebar.html  functions_from_app.js  macros.gs  macros.js
test/: test.py  test2.py
video_player/: CMakeLists.txt  main.cpp
